--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Green Background Page with Grid</title>
+    <title>i can teach anyone to build software</title>
     <style>
         :root {
             --tile-size: 64px; /* Size of each tile in pixels */
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-color: lightgreen;
+            background-image: url('images/tile.png');
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -26,8 +26,18 @@
         header {
             width: 100%;
             text-align: center;
-            padding: 40px 0 60px;
+            padding: 80px 0px;
             font-size: 32px;
+        }
+
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .header img {
+            margin-right: 10px;
         }
 
         .outer-container {
@@ -49,19 +59,50 @@
         .tile {
             width: var(--tile-size);
             height: var(--tile-size);
-            background-color: #D9FFD9; /* Lighter green than the page background */
+            background-color: #f7ffdcb1;
         }
 
         .custom-item {
             position: absolute;
         }
+
+        h1 {
+            font-size: 0.6em;
+            margin: 15px 10px;
+            text-align: left;
+        }
+        h2 {
+            font-size: 0.6em;
+            line-height: 1.3em;
+            font-weight: normal;
+            margin: 15px 10px;
+            text-align: left;
+        }
+
+        .aboutme {
+            background-color: rgba(255, 255, 255, 0.842);
+            border: 2px solid rgba(0, 0, 0, 0.526);
+            padding: 7px 12px;
+            max-width: 500px;
+            text-align: center;
+            margin-right: 50px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
-    <header>
-        hi, i'm james<br />
-        welcome to my small universe
-    </header>
+    <header class="header">
+        <img src="./images/james.png" alt="James" height="150" />
+        <div class="aboutme">
+            <h2>
+                <strong>hi, i'm james!</strong>
+                i build software every day with friends and strangers on my youtube channel
+            </h2>
+            <h2>
+                <a href="https://twitter.com/intent/tweet?text=@jamesmurdza+I+want+to+build" target="_blank">build with me</a>
+            </h2>
+        </div>
+    </header>    
     <div class="outer-container">
         <div class="container" id="container">
             <div class="grid" id="grid"></div>
@@ -122,9 +163,13 @@
         scaleGridToFit();
 
         // Example usage
-        addGridItem(2, 2, 3, 3, "<img src='https://i.ibb.co/1nKz9jj/DALL-E-2024-05-18-10-22-14-A-front-view-of-a-whimsical-house-on-a-white-background-in-the-style-of-s.png' style='width:100%; height:100%;' />");
-        addGridItem(5, 4, 1, 3, "<div style='background-color:#618cf1; width:100%; height:100%;'></div>");
-        addGridItem(15, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌹</div>");
+        addGridItem(2, 2, 3, 3, "<img src='images/house.png' style='width:100%; height:100%;' />");
+        addGridItem(15, 15, 1, 1, "<img src='images/bamse.png' style='width:100%; height:100%;' />");
+        addGridItem(5, 2, 1, 5, "<div style='background-color:#618cf1; width:100%; height:100%;'></div>");
+        addGridItem(15, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🦖</div>");
+        addGridItem(18, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>");
+        addGridItem(18, 5, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>");
+        addGridItem(18, 6, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>");
     </script>
 </body>
 </html>
