--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         .tooltip.show {
             opacity: 1;
         }
+
+        a {
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -113,11 +117,12 @@
         <img src="./images/james.png" alt="James" height="150" />
         <div class="aboutme">
             <h2>
-                <strong>hi, i'm james!</strong>
-                i build software every day with friends and strangers on my youtube channel
+                <strong>Hi, I'm James!</strong>
+                I build software every day with friends and strangers on YouTube. Explore this site to learn more about my world.
             </h2>
-            <h2>
-                <a href="https://twitter.com/intent/tweet?text=@jamesmurdza+I+want+to+build" target="_blank">build with me</a>
+            <h2 style="text-align: right; padding-top:10px;">
+                <a href="https://www.youtube.com/@jamesmurdza?sub_confirmation=1" target="_blank" style="background-color: lightblue; padding: 5px 8px; text-decoration:none;">📺 watch videos</a>
+                <a href="https://twitter.com/intent/tweet?text=@jamesmurdza+I+want+to+build" target="_blank" style="background-color: lightblue; padding: 5px 8px; text-decoration:none;">🐦 build with me</a>
             </h2>
         </div>
     </header>    
