Update tweet text.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </h2>
             <h2 style="text-align: right; padding-top:10px;">
                 <a href="https://www.youtube.com/@jamesmurdza?sub_confirmation=1" target="_blank" style="background-color: lightblue; padding: 5px 8px; text-decoration:none;">📺 watch videos</a>
-                <a href="https://twitter.com/intent/tweet?text=@jamesmurdza+I+want+to+build" target="_blank" style="background-color: lightblue; padding: 5px 8px; text-decoration:none;">🐦 build with me</a>
+                <a href="https://twitter.com/intent/tweet?text=@jamesmurdza+Let's+build+together!+I'm+working+on" target="_blank" style="background-color: lightblue; padding: 5px 8px; text-decoration:none;">🐦 build with me</a>
             </h2>
         </div>
     </header>    
