--- a/index.html
+++ b/index.html
@@ -201,16 +201,16 @@
         scaleGridToFit();
 
         // Example usage
-        addGridItem(2, 2, 3, 3, "<img src='images/house.png' style='width:100%; height:100%;' />", "This is a house");
-        addGridItem(15, 15, 1, 1, "<img src='images/bamse.png' style='width:100%; height:100%;' />", "This is Bamse");
+        addGridItem(2, 2, 3, 3, "<img src='images/house.png' style='width:100%; height:100%;' />", "Someone lives here.");
+        addGridItem(15, 15, 1, 1, "<img src='images/bamse.png' style='width:100%; height:100%;' />", "Have you seen my owner?");
         addGridItem(5, 2, 3, 5, "<div style='background-color:#618cf1; width:100%; height:100%;'></div>", "The pond");
-        addGridItem(6, 3, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🐡</div>", "A fish");
-        addGridItem(8, 5, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🪿</div>", "A goose");
-        addGridItem(15, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🦖</div>", "A dinosaur emoji");
-        addGridItem(12, 8, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🛵</div>", "A scooter emoji");
-        addGridItem(18, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "A tree emoji");
-        addGridItem(18, 5, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "Another tree emoji");
-        addGridItem(18, 6, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "Yet another tree emoji");
+        addGridItem(6, 3, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🐡</div>", "Mrs. Puff.");
+        addGridItem(8, 5, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🪿</div>", "Una ganza");
+        addGridItem(15, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🦖</div>", "A dangerously large dinosaur emoji");
+        addGridItem(12, 8, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🛵</div>", "Let's go somewhere.");
+        addGridItem(18, 4, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "A tree");
+        addGridItem(18, 5, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "Another tree");
+        addGridItem(18, 6, 1, 1, "<div style='width:100%; height:100%; font-size:var(--tile-size); line-height:var(--tile-size);'>🌳</div>", "Yet another tree");
     </script>
 </body>
 </html>
